--- a/assets/css/propeller-theme.css
+++ b/assets/css/propeller-theme.css
@@ -5,28 +5,26 @@
  */
 
 /* 
----------------------------------------
-	Propeller Style Guide Version 1.1.0
----------------------------------------	
-* 	Primary Color : #001E80
-* 	Secondary Color : #4acc8e
+*********************************
+	Murdoch DC Style Guide
+*********************************	
+* 	Primary Background Color : #060000
+*	Primary Accent Color: #CCCCCC
+*	Primary Foreground Color: #FFFFFF
+*	Secondary Background Color: #1E1B1B
+* 	Secondary Accent Color : #CC0100
+*	Secondary Foreground Color: #CCCCCC
+*	Footer Text Color: #fc2d38
+
 * 	Highlighted Text (Title) Color & Fonts : #333c4e, 'Roboto', sans-serif
 * 	Body Text Color & Fonts : #333c4e, 'Roboto', sans-serif
 font-family: 'Roboto', sans-serif;
 font-family: 'Roboto', sans-serif;
-
----------------------------------------
-	Elements Covered
----------------------------------------
-* 	Typography
-* 	Buttons
-* 	Icons
-* 	Form Elements and theme
---------------------------------------- */
+*/
 
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,700|Roboto:100,300,400,500,700);
 
-html { height:100%;}
+html, body { height:100%;}
 body {font-family: 'Roboto', sans-serif; font-size:16px; line-height:1.6; color:#4d575d; background-color:#f5f5f5;}
 
 /*======= Typography =======*/
@@ -59,87 +57,8 @@ a:hover, a:focus{color:#4acc8e;}
 a{ color:rgba(0, 0, 0, 0.84); text-decoration:none; outline:none;}
 /*a:hover, a:focus, a:active{color:#00a9a6;text-decoration:underline;}*/
 
-/*======= Input Field =======*/
-.pmd-textfield .form-control{border-color:rgba(0,0,0,0.14);}
-.pmd-textfield-focused{background-color:#001E80;}
-
-/* Input Field & Selectbox Inverse Theme */
-form.theme-inverse .pmd-textfield-focused, form.theme-inverse .pmd-textfield.has-error .form-control:invalid ~ .pmd-textfield-focused, form.theme-inverse .pmd-radio *:checked + span.pmd-radio-label::after{background-color: #ffffff;}
-form.theme-inverse .pmd-textfield.has-error .form-control:invalid ~ .has-error-text, form.theme-inverse .pmd-textfield-floating-label label{color:rgba(255,255,255,0.54);}
-form.theme-inverse .pmd-textfield.has-error .form-control:invalid{border-color:rgba(255,255,255,0.54); color:#fff;}
-form.theme-inverse .has-error.pmd-textfield-floating-label.pmd-textfield-floating-label-completed label, form.theme-inverse .radio, form.theme-inverse .checkbox{color:#fff;}
-form.theme-inverse .select2-container--default .select2-selection--single .select2-selection__rendered, form.theme-inverse .pmd-textfield .form-control{color:#fff;border-color:rgba(255,255,255,0.54)}
-
-/*======= Error Input =======*/
-.pmd-textfield.has-error .form-control:invalid{color:#e73e52;border-color:#e73e52}
-.pmd-textfield.has-error .form-control:invalid ~ .pmd-textfield-focused{background-color:#e73e52;}
-.has-error.pmd-textfield-floating-label.pmd-textfield-floating-label-completed label{color:#e73e52; opacity:0.64;}
-.pmd-textfield.has-error .form-control:invalid ~ .has-error-text{font-size:12px;color:#e73e52;opacity:0.87;}
-
 /*======= Background fill Color =======*/
-.bg-fill-primary-color {background-color:#4285f4;} /*Propeller Primary color*/
-.bg-fill-secondary-color {background-color:#4ACC8E;} /*Propeller Secondary color*/
-.bg-fill-white {background-color:#ffffff;}
-.bg-fill-darkgrey {background-color:#333333;}
-.bg-fill-yellow { background-color:#ffc776;}
-.bg-fill-darkblue {background-color:#333c4e;}
-
-/*======= Typography fill Color =======*/
-.typo-fill-darkblue {background-color:#333c4e;}
-.typo-fill-darkblue-contrast{ background-color: rgba(51,60,78,0.87);}
-.typo-fill-darkblue-contrast-light{ background-color: rgba(51,60,78,0.54);}
-
-/*======= Button =======*/
-
-/* Primary Button */
-/*.btn-primary{background-color:#4acc8e;}
-.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary:active:focus{background-color:#38B177; color:#fff;}*/
-
-/* Secondary Button */
-.btn-secondary{ background-color:#3c87da; color:#fff;}
-.btn-secondary:hover, .btn-secondary:focus, .btn-secondary:active{background-color:#1e77d8; color:#fff;}
-
-/* Outline Button */
-.pmd-btn-outline{background-color:transparent;border:1px solid #4acc8e;color:#4acc8e;}
-.pmd-btn-outline:hover, .pmd-btn-outline:focus, .pmd-btn-outline:active{background-color:#4acc8e; color:#fff;}
-
-/* Default Button */
-.btn-default{background-color:transparent;color:#333c4e;}
-.btn-default:hover, .btn-default:focus, .btn-default:active{background-color:rgba(51,60,78,0.16); color:#333c4e;}
-
-/* Button Ripple Background */
-.btn .ink{background-color:rgba(255,255,255,0.74)}
-
-/*======= Checkbox =======*/
-.pmd-checkbox [type="checkbox"]:checked + .pmd-checkbox-label::before{ background-color:#4acc8e; border-color:#4acc8e;}
-/* inverse */
-.pmd-card-inverse .pmd-checkbox [type="checkbox"]:checked + .pmd-checkbox-label::before{background-color:#4acc8e; border-color:#4acc8e;}
-
-/*======= Radio =======*/
-.pmd-radio > span.pmd-radio-label::after{background-color:#4acc8e;}
-.pmd-radio *:checked + span.pmd-radio-label::before{border-color:#4acc8e;}
-/* inverse */
-.pmd-card-inverse .pmd-radio > span.pmd-radio-label::after{background-color:#4acc8e;}
-.pmd-card-inverse .pmd-radio *:checked + span.pmd-radio-label::before{ border-color:#4acc8e;}
-
-/*======= Rounded Checkbox Theme =======*/
-/* Normal */
-.checkbox-rounded .pmd-checkbox.active span{color:#fff;font-weight:600;}
-.checkbox-rounded .pmd-checkbox.active{background-color:#4acc8e}
-.checkbox-rounded .pmd-checkbox [type="checkbox"]:not(:checked) + .pmd-checkbox-label::after, .checkbox-rounded .pmd-checkbox [type="checkbox"]:not(:checked) + .pmd-checkbox-label::after{color:#4acc8e;}
-/* Checked */
-.checkbox-rounded .pmd-checkbox [type="checkbox"]:checked + .pmd-checkbox-label::before{background-color:#fff;border-color:#fff;}
-.checkbox-rounded .pmd-checkbox [type="checkbox"]:checked + .pmd-checkbox-label::after{color:#4acc8e;}
-
-/* Inverse Theme */
-/* Normal */
-form.theme-inverse .checkbox-rounded .pmd-checkbox [type="checkbox"]:not(:checked) + .pmd-checkbox-label::before{border-color:rgba(0,0,0,0.34)}
-form.theme-inverse .checkbox-rounded .pmd-checkbox [type="checkbox"]:not(:checked) + .pmd-checkbox-label::after, form.theme-inverse .checkbox-rounded .pmd-checkbox [type="checkbox"]:checked + .pmd-checkbox-label::after{color:#4acc8e;}
-/* Checked */
-form.theme-inverse .checkbox-rounded .pmd-checkbox [type="checkbox"]:checked + .pmd-checkbox-label::before{border-color:#fff;background-color:#fff;}
-
-/*======= Background fill Color =======*/
-.bg-fill-primary-color {background-color:#4285F4;} /*Propeller Primary color*/
+.bg-fill-primary-color {background-color:#060000;} /*Propeller Primary color*/
 .bg-fill-secondary-color {background-color: #51D184;} /*Propeller Secondary color*/
 .bg-fill-darkblue {background-color: #1a2940;}
 .bg-fill-lightblue {background-color: #1f2f46;}
@@ -152,9 +71,202 @@ form.theme-inverse .checkbox-rounded .pmd-checkbox [type="checkbox"]:checked + .
 .bg-fill-sky { background-color:#65bfff;}
 .bg-fill-red{ background-color:#EF3648;}
 
-/*======= Navbar =======*/
-.navbar-inverse .navbar-nav > li > a{ color:#fff;}
-.navbar-inverse .navbar-brand{color:#fff;}
-.pmd-user-info a{color:#fff;}
-.navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:hover, .navbar-inverse .navbar-nav > .open > a:focus,
-.navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus{ background-color:#2764c9;}
+
+  
+  .btn-primary {
+	color: #fff;
+	background-color: #1E1B1B;
+  }
+  .btn-primary:hover {
+	color: #fff;
+	background-color: #060000;
+  }
+  .btn-primary:focus, .btn-primary.focus, .btn-primary:active, .btn-primary.active, .btn-primary.active.focus, .btn-primary.active:focus, .btn-primary:active.focus, .btn-primary:active:focus {
+	color: #fff;
+	background-color: #060000;
+  }
+  .btn-primary .ink {
+	background-color: #060000;
+  }
+  .btn-primary.pmd-btn-flat {
+	color: #1E1B1B;
+	background-color: transparent;
+  }
+  .btn-primary.pmd-btn-flat:hover {
+	background-color: #e5e5e5;
+  }
+  .btn-primary.pmd-btn-flat:active, .btn-primary.pmd-btn-flat.active, .btn-primary.pmd-btn-flat:focus {
+	color: #060000;
+	background-color: #ccc;
+  }
+  .btn-primary.pmd-btn-flat .ink {
+	background-color: #808080;
+  }
+
+  .pmd-textfield-focused {
+	  background-color:#060000 ;
+  }
+
+
+/*
+*********************************
+			Dashboard Page
+*********************************	
+*/
+
+/*Tab Headings Background*/
+
+ .pmd-tabs-bg {background-color: #1E1B1B} 
+ /* .pmd-tabs-bg {background-color: transparent}  */
+ 
+.pmd-tabs{
+	position: absolute;
+	bottom: 0px;
+	top: auto;
+	width: 93.75%;
+
+}
+.pmd-tabs pmd-tabs-bg{
+	top: none;
+	
+}
+
+ .navbar-inverse{
+	 background-color: #060000;
+ }
+
+ .navbar{
+	 position: sticky;
+	 top:0;
+	 border:none;
+ }
+ .navbar-inverse .navbar-brand{
+	color: #FFFFFF;
+
+ }
+
+ .navbar > .container .navbar-brand, .navbar > .container-fluid .navbar-brand{
+	 padding:24px;
+	 padding-top:auto;
+	 margin-left:0px;
+	 font-size: 5vmin;
+	 z-index: -1;
+
+ }
+
+ .brand-image {
+	 height: inherit;
+	 width: 6.25%;
+	 color: #FFFFFF;
+	 background-color: #CC0100;
+
+ }
+
+.navbar-header {
+	margin-bottom:0;
+	z-index: 1;
+ }
+
+/*active tab indicator bar*/
+.pmd-tabs .pmd-tab-active-bar {background: #CC0100;}
+
+.pmd-tabs-bg .nav-tabs > li > a{
+	color:#FFFFFF;
+}
+
+.pmd-tabs-bg .nav-tabs > li > a:hover,
+.pmd-tabs-bg .nav-tabs > li > a:focus {
+	color:#CC0100;
+}
+
+.container-fluid { 
+	padding-left: 0px;
+	padding-right: 0px;
+}
+
+.mdc-footer{
+	position: absolute;
+	bottom: 0px;
+	background-color:#060000;
+	width:100%;
+	height: 120px;
+	z-index: 1;
+}
+.mdc-footer > ul {
+	list-style-type: none;
+    margin: 0;
+	padding: 0;
+	text-align:center;
+}
+.mdc-footer >ul >li {
+	padding-right:20px;
+	display: inline-block;
+}
+.mdc-footer > ul > li > a {
+	color: #fc2d38;
+	font-size: 16px;
+	text-decoration: none;
+	line-height: 120px;
+	
+}
+
+.mdc-gauge{
+margin: auto;
+width:auto;
+}
+
+canvas {
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    width: inherit;
+}
+
+/**********************************
+			About Page
+**********************************/
+
+
+div#about-card{
+	width:80%;
+	margin-left: 10%;
+}
+
+
+/*********************************
+			Admin Page
+*********************************/
+
+.pmd-card#admin-login-card{
+	width: 500px;
+	height: 400px;
+	z-index: 99;
+}
+
+.component-box#admin-component-box {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+.a#admin-login-button {
+	text-decoration: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
