added items to allow hiding in kisok

--- a/html/templates/cards.html
+++ b/html/templates/cards.html
@@ -1,4 +1,4 @@
-<div class="col-md-3 col-md-4 col-sm-6 col-xs-12">
+<div id="TileNo{{id}}" presVisible="{{PublicPresVis}}" class="col-md-3 col-md-4 col-sm-6 col-xs-12">
     <div class="pmd-card pmd-card-default pmd-z-depth">
         <!-- card header -->
         <div class="pmd-card-title">
