--- a/html/templates/settings.html
+++ b/html/templates/settings.html
@@ -44,6 +44,17 @@
 					<input type="text" class="form-control" name="tickformat" placeholder="{{tickformat}}">
 				</div>			
 			</li>
+
+			<li class="list-group-item">
+				<div class="form-group">
+					<label>Display in Presentation Mode: </label>
+					<input type="hidden" name="PublicPresVis" value="0">
+					<input id="checkbox-{{id}}" type="checkbox" name="PublicPresVis" value="1"><br>
+					<script type="text/javascript">
+						document.getElementById("checkbox-{{id}}").checked = ({{PublicPresVis}} === 1);
+					</script>					
+				</div>		
+			</li>
 			<li class="list-group-item">
 				<input type="submit" class="btn btn-primary" name="action" value="Update" />
 				<input type="submit" class="btn btn-primary" name="action" value="Delete" />
