--- a/html/templates/settings.html
+++ b/html/templates/settings.html
@@ -14,16 +14,15 @@
 				<div class="form-group">
 					<label>Sub-Title: </label>
 					<input type="text" class="form-control" name="subtitle" placeholder="{{subtitle}}">
-				</div>			
+				</div>
 			</li>
 
 			<li class="list-group-item">
 				<div class="form-group">
-					<label>Data Title: </label>
-					<input type="text" class="form-control" name="datatitle" placeholder="{{datatitle}}">
+					<label>Data ID: </label>
+					<input type="text" class="form-control" name="device" placeholder="{{device}}">
 				</div>			
 			</li>
-
 
 			<li class="list-group-item">
 				<div class="form-group">
