--- a/html/templates/cards.html
+++ b/html/templates/cards.html
@@ -7,7 +7,7 @@
         </div>
         <!-- card media -->
         <div class="pmd-card-media">
-            <div class="mdc-gauge">
+            <div class="mdc-gauge" id="CanvasGage{{id}}">
             <!-- radial gauge -->
             <canvas id="Canvas{{id}}" data-type="radial-gauge" data-value="0" data-title="{{datatitle}}" data-width="400" data-height="400" data-bar-width="10" data-bar-shadow="0" data-border-shadow-width="0" data-border-inner-width="0" data-border-outer-width="0" data-border-middle-width="0" data-color-bar-progress="rgba(50,50,200,1)" data-color-bar="#9999" data-color-title="black" data-color-needle="red" data-color-needle-end="red" data-color-numbers="black" data-highlights="false" data-value-box-border-radius="0" data-value-box-stroke="0" data-value-text-shadow="0" data-color-value-box-shadow="0" data-color-units="black" data-color-value-text="black" data-color-major-ticks="black" data-needle-type="line" data-needle-width="1" data-needle-circle-size="5" data-needle-circle-inner="false" data-color-value-box-background="transparent" data-color-needle-circle-outer="red" data-color-needle-circle-outer-end="red" data-animation-rule="linear" data-stroke-ticks="0" data-value-int="2" data-value-dec="1" width="400" height="400" style="width: 400px; height: 400px;">
             </canvas>
