--- a/assets/css/propeller.css
+++ b/assets/css/propeller.css
@@ -47,14 +47,17 @@
 }
 
 /* Custom */
-.center {
+.center-text-card {
   text-align: center;
-  width: 50%;
-  height: 20%;
-  overflow: auto;
-  margin: auto;
   position: absolute;
-  top: 0; left: 0; bottom: 0; right: 0;
+  float: left;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.center-text-card h1 {
+  font-size: 1.5rem;
 }
 
 /*!
