--- a/html/templates/cards.html
+++ b/html/templates/cards.html
@@ -3,7 +3,7 @@
         <!-- card header -->
         <div class="pmd-card-title">
             <h2 class="pmd-card-title-text">{{title}}</h2>
-            <span class="pmd-card-subtitle-text">{{subtitle}}</span>	
+            <span class="pmd-card-subtitle-text">Device ID #{{device}} - {{subtitle}}</span>	
         </div>
         <!-- card media -->
         <div class="pmd-card-media">
